cluster/generated/goldilocks/goldilocks.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    goldilocks.fairwinds.com/vpa-update-mode: auto
  name: goldilocks
spec: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: goldilocks-dashboard-ingress
  namespace: goldilocks
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
          podSelector:
            matchLabels:
              app.kubernetes.io/component: server
              app.kubernetes.io/name: authentik
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: dashboard
      app.kubernetes.io/name: goldilocks
  policyTypes:
    - Ingress
